[project]
name = "wx2"
version = "1.0.0"
description = "WX2 - Fast Audio Transcription and Diarization System with Whisper and Pyannote"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "requests",
    "numpy",
    "transformers",
    "pyannote.audio",
    "rich",
    "ffmpeg-python",
]

[dependency-groups]
cpu = ["torch", "torchvision", "torchaudio"]
cuda = ["torch", "torchvision", "torchaudio"]

[tool.uv]
default-groups = ["cuda"]
conflicts = [[{ group = "cpu" }, { group = "cuda" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda", group = "cuda" },
    { index = "pytorch-cpu", group = "cpu" },
]
torchvision = [
    { index = "pytorch-cuda", group = "cuda" },
    { index = "pytorch-cpu", group = "cpu" },
]
torchaudio = [
    { index = "pytorch-cuda", group = "cuda" },
    { index = "pytorch-cpu", group = "cpu" },
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
